syntax = "proto3";

option java_package = "de.thkoeln.cexprotobuf.messages.proto";
option java_outer_classname = "ProtoMessages";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message OrderCollectionWrapperProtoDto {
  repeated OrderProtoDto orders = 1;
}

message OrderProtoDto {
  CupSizeProtoDto size = 1;
  string product = 2;
  google.protobuf.Timestamp date = 3;
  int32 count = 4;
  repeated OptionProtoDto options = 5;
}

message OptionProtoDto {
  string name = 1;
  int32 price = 2;
}

enum CupSizeProtoDto {
  SMALL = 0;
  TALL = 1;
  GRANDE = 2;
  VENTI = 3;
}
